--- a/src/Pages/Home/styles.module.css
+++ b/src/Pages/Home/styles.module.css
@@ -2,6 +2,6 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100dvh;
+    height: 5000px;
     background-color: rgb(0, 0, 0);;
 }
