--- a/src/Pages/Home/Features/styles.module.css
+++ b/src/Pages/Home/Features/styles.module.css
@@ -1,5 +1,12 @@
 .container{
-    height: 1000px;
+    width: 100%;
+    height: 2000px;
+    position: relative;
+}
+
+
+.square{
+    height: 500px;
     background-color: blue;
     position: sticky;
     top: 0px;
