--- a/src/Pages/Home/Features/styles.module.css
+++ b/src/Pages/Home/Features/styles.module.css
@@ -4,10 +4,11 @@
     position: relative;
 }
 
-
-.square{
-    height: 500px;
-    background-color: blue;
-    position: sticky;
-    top: 0px;
+.title{
+    font-family: 'mulish';
+    font-size: 2rem;
+    font-weight: 800;
+    color: var(--text-color);
+    margin: 0px;
 }
+
