--- a/src/Pages/Home/Features/styles.module.css
+++ b/src/Pages/Home/Features/styles.module.css
@@ -1,14 +1,27 @@
 .container{
     width: 100%;
-    height: 2000px;
+    height: 10000px;
     position: relative;
 }
 
-.title{
-    font-family: 'mulish';
-    font-size: 2rem;
-    font-weight: 800;
-    color: var(--text-color);
-    margin: 0px;
+.tunnel{
+    width: 100%;
+    height: 100vh;
+    border-radius: 100%;
+    position: sticky;
+    top: 0px;
+    background-color: rgba(0, 0, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+.ring{
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    border: 1px solid black;
+    position: absolute;
+    inset: 0;
+    margin: auto;
+}
