--- a/src/global.css
+++ b/src/global.css
@@ -12,7 +12,8 @@ body{
     margin: 0px;
     min-height: 100vh;
     height: 5000px;
-    background-color: var(--background)
+    background-color: var(--background);
+    overflow-x: hidden;
 }
 
 * {
