--- a/src/Pages/Home/Intro/AnimationSequence/AnimateWorld/styles.module.css
+++ b/src/Pages/Home/Intro/AnimationSequence/AnimateWorld/styles.module.css
@@ -8,7 +8,7 @@
 }
 
 .container > path{
-    transition: all 0s;
+    transition: all 0s, stroke-dashoffset 0.6s cubic-bezier(0.25, 1, 1, 1);
 }
 
 @media(max-width: 1035px){
