--- a/src/Pages/Home/Intro/AnimationSequence/AnimateWorld/styles.module.css
+++ b/src/Pages/Home/Intro/AnimationSequence/AnimateWorld/styles.module.css
@@ -5,10 +5,7 @@
     inset: 0;
     margin: auto;
     z-index: var(--far);
-}
-
-.container > path{
-    transition: all 0s, stroke-dashoffset 0.6s cubic-bezier(0.25, 1, 1, 1);
+    overflow: visible;
 }
 
 @media(max-width: 1035px){
