--- a/src/Pages/Home/Sponsors/AnimateBoxToScreen/AnimateScreen/styles.module.css
+++ b/src/Pages/Home/Sponsors/AnimateBoxToScreen/AnimateScreen/styles.module.css
@@ -1,7 +1,6 @@
-.block, .screen{
+.screen{
     width: 100px;
     height: 100px;
-    background-color: blue;
     position: fixed;
     inset: 0;
     margin: auto;
@@ -11,4 +10,10 @@
     z-index: var(--close);
     transition: all 0s;
     padding: 80px 0px;
+}
+
+@media(max-width: 700px){
+    .screen{
+        padding: 50px 0px;
+    }
 }
