--- a/src/Pages/Home/Sponsors/AnimateBoxToScreen/AnimateScreen/AnimateText/AnimateLetter/styles.module.css
+++ b/src/Pages/Home/Sponsors/AnimateBoxToScreen/AnimateScreen/AnimateText/AnimateLetter/styles.module.css
@@ -1,16 +1,34 @@
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
+.container > span{
+    font-family: 'mulish';
+    font-size: 2.5rem;
+    color: black;
+    font-weight: 800;
+    line-height: 30px;
+}
+
 .letter{
-    height: 240px;
+    height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 40px;
+    gap: 20px;
     overflow: scroll;
-    scrollbar-width: 0px;
+    scrollbar-width: none;
     scrollbar-color: transparent transparent;  
     pointer-events: none;
 }
 
+
 .letter > span{
+    display: inline-block;
     font-family: 'mulish';
     font-size: 15rem;
     color: black;
@@ -18,12 +36,19 @@
     line-height: 190px;
 }
 
+.letter > span:last-child{
+    margin-bottom: -30px;
+}
+
 .letter::-webkit-scrollbar{
+    display: none;
     width: 0px;
     background-color: transparent;
 }
 
 .letter::-webkit-scrollbar-thumb{
+    display: none;
+    width: 0px;
     background-color: transparent;
     border-radius: 0px;
 }
